--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@
    justify-content: space-between;
    padding: 50px;
    max-width: 100%;
-    gap:20px;
+   gap:20px;
+   flex-wrap: wrap;
  }
  .pd1-imgdiv{
    order:1;
@@ -46,6 +47,7 @@
   padding: 50px;
   max-width: 100%;
   gap:20px;
+  flex-wrap: wrap;
 }
 .pd2-imgdiv{
   order:2;
@@ -71,6 +73,7 @@
   padding: 50px;
   max-width: 100%;
   gap:20px;
+  flex-wrap: wrap;
 }
 .pd3-imgdiv{
   order:1;
